<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="alan.tool.volumemanager.MainActivity">

    <SeekBar
        android:id="@+id/seekbar_ring_vol"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seekbar_media_vol"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/seekbar_media_vol"
        android:layout_marginTop="78dp"
        android:indeterminate="false"
        android:max="10" />

    <TextView
        android:id="@+id/textview_ring_vol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/seekbar_ring_vol"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/ring_volume"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textview_media_vol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textview_ring_vol"
        android:layout_marginTop="27dp"
        android:text="@string/media_volume"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <SeekBar
        android:id="@+id/seekbar_media_vol"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textview_media_vol"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_toEndOf="@+id/textview_media_vol"
        android:layout_toRightOf="@+id/textview_media_vol"
        android:indeterminate="false"
        android:max="10" />

    <TextView
        android:id="@+id/textview_alarm_vol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textview_media_vol"
        android:layout_marginTop="32dp"
        android:text="@string/alarm_volume"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textview_call_vol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textview_alarm_vol"
        android:layout_marginTop="31dp"
        android:text="@string/call_volume"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <SeekBar
        android:id="@+id/seekbar_alarm_vol"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textview_alarm_vol"
        android:layout_alignLeft="@+id/seekbar_media_vol"
        android:layout_alignStart="@+id/seekbar_media_vol"
        android:indeterminate="false"
        android:max="10" />

    <SeekBar
        android:id="@+id/seekbar_call_vol"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textview_call_vol"
        android:layout_alignLeft="@+id/seekbar_alarm_vol"
        android:layout_alignStart="@+id/seekbar_alarm_vol"
        android:indeterminate="false"
        android:max="10" />

    <TextView
        android:id="@+id/textview_current_ring_vol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textview_media_vol"
        android:layout_toEndOf="@+id/seekbar_ring_vol"
        android:layout_toRightOf="@+id/seekbar_ring_vol"
        android:enabled="true"
        android:text="0 / 0"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textview_current_media_vol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textview_alarm_vol"
        android:layout_toEndOf="@+id/seekbar_media_vol"
        android:layout_toRightOf="@+id/seekbar_media_vol"
        android:text="0 / 0"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textview_current_alarm_vol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textview_call_vol"
        android:layout_toEndOf="@+id/seekbar_alarm_vol"
        android:layout_toRightOf="@+id/seekbar_alarm_vol"
        android:text="0 / 0"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textview_current_call_vol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/seekbar_call_vol"
        android:layout_toEndOf="@+id/seekbar_call_vol"
        android:layout_toRightOf="@+id/seekbar_call_vol"
        android:text="0 / 0"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/save"
        android:maxWidth="80dp"
        android:minWidth="80dp" />

    <GridLayout
        android:id="@+id/layout_profiles"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/seekbar_call_vol"
        android:layout_marginTop="71dp"
        android:columnCount="8"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_row="0"
            android:id="@+id/radiogroup_preferences">

            <RadioButton
                android:id="@+id/radio_preference1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:text="@string/preference1" />

            <RadioButton
                android:id="@+id/radio_preference2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:text="@string/preference2" />

            <RadioButton
                android:id="@+id/radio_preference3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="2"
                android:checked="false"
                android:text="@string/preference3" />
        </RadioGroup>
    </GridLayout>

    <Button
        android:id="@+id/button_load"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/load"
        android:minWidth="80dp"
        android:maxWidth="80dp" />

</RelativeLayout>
